Language z-index fix

--- a/scss/components/language-picker.scss
+++ b/scss/components/language-picker.scss
@@ -24,7 +24,7 @@
 
     &-menu {
         position: absolute;
-        z-index: 2000;
+        z-index: 9999;
         top: 200%;
         right: 0;
         display: none;
